forgejo/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy: { type: Recreate }

  template:
    spec:
      containers:
        - name: forgejo
          image: forgejo
          ports:
            - { name: http, containerPort: 3000 }
            - { name: ssh, containerPort: 30022 }
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests: { cpu: 10m, memory: 128Mi }
            limits: { cpu: 1000m, memory: 256Mi }

      volumes:
        - name: data
          persistentVolumeClaim: { claimName: forgejo-data-pvc }
