forgejo/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
spec:
  type: NodePort
  ports:
    - name: ssh
      port: 30022
      protocol: TCP
      targetPort: ssh
      nodePort: 30022
